--- a/acoes.html
+++ b/acoes.html
@@ -41,12 +41,27 @@ document.querySelectorAll("a").forEach(link => {
 
 <div class="card">
     <h3>Projeto verão</h3>
-    <p>Realizado pausa hidratação no turno A e B dia 12/02/2026.</p>
+    <p>12/02/2026: Realizado pausa hidratação no turno A e B.</p>
     <img src="IMG/acaoagua.png" alt="">
+</div>
+
+<div class="card">
+    <h3>Ação Cardas:</h3>
+    <p>25/02/2026: Inserido rodapé delimitando adequadamente a área destinada aos tambores, 
+        garantindo que não haja invasão do espaço reservado ao extintor.</p>
+    <img src="IMG/acao2.jpeg" alt="" width="300" height="400">
+</div>
+
+<div class="card">
+    <h3>Ação bebedouro corredor:</h3>
+    <p>26/02/2026: Instalado próximo à porta do setor de Hastes, local que concentra a maior circulação e permanência de colaboradores, 
+        visando melhor visibilidade e acesso.</p>
+    <img src="IMG/acao3.jpeg" alt="" width="300" height="500">
 </div>
 
 
 </div>
 
 </body>
+
 </html>
