--- a/acoes.html
+++ b/acoes.html
@@ -26,10 +26,14 @@ document.querySelectorAll("a").forEach(link => {
 
 <body>
 <nav>
-    <a href="index.html">Página Inicial</a>
-    <a href="alerta.html">Solicitar Ajuda</a>
-    <a href="acoes.html">Ações da CIPA</a>
-    <a href="reunioes.html">Calendário reuniões</a>
+    
+
+    <div class="nav-links">
+        <a href="index.html">Página Inicial</a>
+        <a href="alerta.html">Solicitar Ajuda</a>
+        <a href="acoes.html">Ações da CIPA</a>
+        <a href="reunioes.html">Calendário reuniões</a>
+    </div>
 </nav>
 
 <div class="container">
@@ -65,3 +69,4 @@ document.querySelectorAll("a").forEach(link => {
 </body>
 
 </html>
+
