--- a/alerta.html
+++ b/alerta.html
@@ -48,10 +48,14 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <header>
     <nav>
-    <a href="index.html">Página Inicial</a>
-    <a href="alerta.html">Solicitar Ajuda</a>
-    <a href="acoes.html">Ações da CIPA</a>
-    <a href="reunioes.html">Calendário reuniões</a>
+    
+
+    <div class="nav-links">
+        <a href="index.html">Página Inicial</a>
+        <a href="alerta.html">Solicitar Ajuda</a>
+        <a href="acoes.html">Ações da CIPA</a>
+        <a href="reunioes.html">Calendário reuniões</a>
+    </div>
 </nav>
 </header>
 
@@ -92,4 +96,5 @@ document.addEventListener("DOMContentLoaded", function () {
 </div>
 
 </body>
+
 </html>
