--- a/reunioes.html
+++ b/reunioes.html
@@ -24,10 +24,14 @@ document.querySelectorAll("a").forEach(link => {
 <body>
 
 <nav>
-    <a href="index.html">Página Inicial</a>
-    <a href="alerta.html">Solicitar Ajuda</a>
-    <a href="acoes.html">Ações da CIPA</a>
-    <a href="reunioes.html">Calendário reuniões</a>
+    
+
+    <div class="nav-links">
+        <a href="index.html">Página Inicial</a>
+        <a href="alerta.html">Solicitar Ajuda</a>
+        <a href="acoes.html">Ações da CIPA</a>
+        <a href="reunioes.html">Calendário reuniões</a>
+    </div>
 </nav>
 
 <div class="container">
@@ -112,4 +116,5 @@ document.querySelectorAll("a").forEach(link => {
 </div>
 
 </body>
+
 </html>
